feat: adicionando dataSeeder em tags e departamentos